[package]
name = "mini-tmpfiles"
version = "0.1.0"
edition = "2021"
authors = ["Artemis Tosini <me@artem.ist>"]
license = "MIT"
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
nom = "7.1.3"
phf = { version = "0.11.2", features = ["macros"] }
