[package]
name = "mini-tmpfiles"
version = "0.1.0"
edition = "2021"
authors = ["Artemis Tosini <me@artem.ist>", "Skye <me@skye-c.at>"]
license = "MIT"
categories = ["command-line-utilities"]

[lib]
name = "mini_tmpfiles"
test = false
doctest = false

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
phf = { version = "0.11.2", features = ["macros"] }
