[package]
name = "mini-tmpfiles-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.mini-tmpfiles]
path = ".."

[[bin]]
name = "parse_line"
path = "fuzz_targets/parse_line.rs"
test = false
doc = false
bench = false
